home page from style sheet

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title><%= webpackConfig.metadata.title %></title>
-
   <meta name="description" content="<%= webpackConfig.metadata.title %>">
 
   <% if (webpackConfig.htmlElements.headTags) { %>
@@ -16,10 +15,10 @@
 
   <!-- base url -->
   <base href="<%= webpackConfig.metadata.baseUrl %>">
-
+ 
 </head>
 
-<body>
+<body class="antialiased">
 
   <app>
     Loading...
@@ -29,7 +28,6 @@
   <!-- Webpack Dev Server reload -->
   <script src="/webpack-dev-server.js"></script>
   <% } %>
-
 
 </body>
 </html>
